--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ pluginManagement {
     }
     plugins {
         id 'org.jetbrains.kotlin.jvm' version '2.0.20'
+        id 'org.jetbrains.kotlin.android' version '2.0.20'
     }
 }
 plugins {
